account-data/Reishi-Narisada/eu-west-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-20769a59",
                    "RouteTableId": "rtb-9e6395f8"
                }
            ],
            "OwnerId": "416817624313",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-9e6395f8",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-da371ebe",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-1cce5a7b"
        }
    ]
}
